Introduce v2 Trust API
