# src/main/kotlin/eu/europa/ec/eudi/trustvalidator/domain/VerificationCase.kt
@@ -1,0 +1,37 @@
+/*
+ * Copyright (c) 2023 European Commission
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package eu.europa.ec.eudi.trustvalidator.domain
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+enum class VerificationCase {
+    EU_WIA,
+    EU_WUA,
+    EU_WUA_STATUS,
+    EU_PID,
+    EU_PID_STATUS,
+    EU_QEAA,
+    EU_QEAA_STATUS,
+    EU_PUB_EAA,
+    EU_PUB_EAA_STATUS,
+    EU_EAA,
+    EU_EAA_STATUS,
+    EU_WRPRC,
+    EU_WRPRC_STATUS,
+    EU_WRPAC,
+    EU_WRPAC_STATUS,
+}
