# src/main/resources/public/openapi.json
@@ -14,7 +14,7 @@
     "/trust": {
       "post": {
         "tags": [
-          "Trust validator"
+          "trust validator"
         ],
         "description": "Simple Kotlin/Spring Boot WebFlux service to check whether an X.509 certificate chain (x5c) is trusted for a given service type.",
         "operationId": "initializeTrust",
@@ -40,7 +40,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/TrustQueryRequest"
+                  "$ref": "#/components/schemas/TrustQueryResponse"
                 },
                 "examples": {
                   "IsTrusted": {
@@ -66,6 +66,68 @@
                   },
                   "UnknownServiceType": {
                     "$ref": "#/components/examples/TrustUnknownService"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/v2/trust": {
+      "post": {
+        "tags": [
+          "trust validator"
+        ],
+        "description": "Check if a X509 certificate chain is trusted or not",
+        "operationId": "checkTrustV2",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/TrustQuery"
+              },
+              "examples": {
+                "TrustQueryEuPid": {
+                  "$ref": "#/components/examples/TrustQueryEuPid"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TrustResponse"
+                },
+                "examples": {
+                  "TrustResponseTrusted": {
+                    "$ref": "#/components/examples/TrustResponseTrusted"
+                  },
+                  "TrustResponseNotTrusted": {
+                    "$ref": "#/components/examples/TrustResponseNotTrusted"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                },
+                "examples": {
+                  "ErrorResponseUnparsableRequestBody": {
+                    "$ref": "#/components/examples/ErrorResponseUnparsableRequestBody"
                   }
                 }
               }
@@ -176,6 +238,86 @@
           "error",
           "description"
         ]
+      },
+      "X509Certificate": {
+        "type": "string",
+        "nullable": false,
+        "format": "base64"
+      },
+      "VerificationCase": {
+        "type": "string",
+        "nullable": false,
+        "enum": [
+          "EU_WIA",
+          "EU_WUA",
+          "EU_WUA_STATUS",
+          "EU_PID",
+          "EU_PID_STATUS",
+          "EU_QEAA",
+          "EU_QEAA_STATUS",
+          "EU_PUB_EAA",
+          "EU_PUB_EAA_STATUS",
+          "EU_EAA",
+          "EU_EAA_STATUS",
+          "EU_WRPRC",
+          "EU_WRPRC_STATUS",
+          "EU_WRPAC",
+          "EU_WRPAC_STATUS"
+        ]
+      },
+      "TrustQuery": {
+        "type": "object",
+        "nullable": false,
+        "properties": {
+          "chain": {
+            "description": "A non-empty list of DER encoded X509 certificates in Base64",
+            "type": "array",
+            "nullable": false,
+            "items": {
+              "$ref": "#/components/schemas/X509Certificate"
+            },
+            "minItems": 1
+          },
+          "case": {
+            "allOf": [
+              {
+                "description": "How the X509 certificate chain trust must be checked as"
+              },
+              {
+                "$ref": "#/components/schemas/VerificationCase"
+              }
+            ]
+          }
+        },
+        "required": [
+          "chain",
+          "case"
+        ]
+      },
+      "TrustResponse": {
+        "type": "object",
+        "nullable": false,
+        "properties": {
+          "trusted": {
+            "description": "Whether the X509 certificate chain is trusted or not",
+            "type": "boolean",
+            "nullable": false
+          }
+        }
+      },
+      "ErrorResponse": {
+        "type": "object",
+        "nullable": false,
+        "properties": {
+          "description": {
+            "description": "A short description of the error that occurred",
+            "type": "string",
+            "nullable": false
+          }
+        },
+        "required": [
+          "description"
+        ]
       }
     },
     "examples": {
@@ -212,6 +354,33 @@
         "value": {
           "error": "Unknown service type",
           "description": "Service type provided does not exist"
+        }
+      },
+      "TrustQueryEuPid": {
+        "description": "Check if the X509 certificate chain belongs to a trusted PID Provider",
+        "value": {
+          "chain": [
+            "MIIC6zCCApGgAwIBAgIUbX8nbYSLRvy10mKN+hfCVr/8cBcwCgYIKoZIzj0EAwIwXDEeMBwGA1UEAwwVUElEIElzc3VlciBDQSAtIFVUIDAyMS0wKwYDVQQKDCRFVURJIFdhbGxldCBSZWZlcmVuY2UgSW1wbGVtZW50YXRpb24xCzAJBgNVBAYTAlVUMB4XDTI1MDQxMDE0MjU0MFoXDTI2MDcwNDE0MjUzOVowUjEUMBIGA1UEAwwLUElEIERTIC0gMDMxLTArBgNVBAoMJEVVREkgV2FsbGV0IFJlZmVyZW5jZSBJbXBsZW1lbnRhdGlvbjELMAkGA1UEBhMCVVQwWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAASrxZ13wLj/nUuGebYRmPO0q7pRk1x1SjrqLTvtQFpQcy9TwFCcgie/BBC2j/KpLcCr+oj4tyZAofmvHdaTExbBo4IBOTCCATUwHwYDVR0jBBgwFoAUYseURyi9D6IWIKeawkmURPEB08cwJwYDVR0RBCAwHoIcZGV2Lmlzc3Vlci1iYWNrZW5kLmV1ZGl3LmRldjAWBgNVHSUBAf8EDDAKBggrgQICAAABAjBDBgNVHR8EPDA6MDigNqA0hjJodHRwczovL3ByZXByb2QucGtpLmV1ZGl3LmRldi9jcmwvcGlkX0NBX1VUXzAyLmNybDAdBgNVHQ4EFgQUcs3KyqizHgtXRe32n6JBJHAfaLYwDgYDVR0PAQH/BAQDAgeAMF0GA1UdEgRWMFSGUmh0dHBzOi8vZ2l0aHViLmNvbS9ldS1kaWdpdGFsLWlkZW50aXR5LXdhbGxldC9hcmNoaXRlY3R1cmUtYW5kLXJlZmVyZW5jZS1mcmFtZXdvcmswCgYIKoZIzj0EAwIDSAAwRQIgTVZnchD+Qjq53Xs0oc07y3zG6kAXFkJ+ZKzlVG22sC8CIQDtDMQq0Qm/fQ5orrjRT4XB+0Jb6xFPxX9QkVRaMy/IiA=="
+          ],
+          "case": "EU_PID"
+        }
+      },
+      "TrustResponseTrusted": {
+        "description": "X509 certificate chain is trusted",
+        "value": {
+          "trusted": true
+        }
+      },
+      "TrustResponseNotTrusted": {
+        "description": "X509 certificate chain is not trusted",
+        "value": {
+          "trusted": false
+        }
+      },
+      "ErrorResponseUnparsableRequestBody": {
+        "description": "Request body cannot be parsed",
+        "value": {
+          "description": "Unparsable request body"
         }
       }
     }
